kubernetes/script/skywalking/oap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skywalking-oap-service
  namespace: skywalking
  labels:
    app: oap
spec:
  type: NodePort
  selector:
    app: oap
  ports:
    - name: service
      port: 11800
      protocol: TCP
      targetPort: 11800
      nodePort: 30001

---
apiVersion: v1
kind: Service
metadata:
  name: skywalking-oap-ui
  namespace: skywalking
  labels:
    app: oap
spec:
  type: ClusterIP
  selector:
    app: oap
  ports:
    - name: ui
      port: 12800
      protocol: TCP
      targetPort: 12800
