kubernetes/script/skywalking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: skywalking
  namespace: skywalking
spec:
  rules:
   - host: skywalking.net.test
     http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-dotnet-service
                port:
                  number: 8080
   - host: skywalking.java.test
     http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skywalking-service
                port:
                  number: 8080
